// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Typography Components Label Snapshot 1`] = `
<Text
  color="blue"
  defaultColor="blue"
  defaultWeight="Bold"
  font="TitilliumSansPro"
  fontStyle={
    {
      "fontSize": 16,
    }
  }
  style={
    [
      {
        "fontSize": 16,
      },
      {
        "color": "#0073E6",
        "fontFamily": "Titillium Sans Pro",
        "fontStyle": "normal",
        "fontWeight": "700",
      },
    ]
  }
  weight="Bold"
>
  Text
</Text>
`;

exports[`Test Typography Components Label Snapshot 2`] = `
<Text
  color="blue"
  defaultColor="blue"
  defaultWeight="Bold"
  font="TitilliumSansPro"
  fontStyle={
    {
      "fontSize": 16,
    }
  }
  style={
    [
      {
        "fontSize": 16,
      },
      {
        "color": "#0073E6",
        "fontFamily": "Titillium Sans Pro",
        "fontStyle": "normal",
        "fontWeight": "700",
      },
    ]
  }
  weight="Bold"
>
  Text
</Text>
`;

exports[`Test Typography Components Label Snapshot 3`] = `
<Text
  color="bluegrey"
  defaultColor="blue"
  defaultWeight="Bold"
  font="TitilliumSansPro"
  fontStyle={
    {
      "fontSize": 16,
    }
  }
  style={
    [
      {
        "fontSize": 16,
      },
      {
        "color": "#475A6D",
        "fontFamily": "Titillium Sans Pro",
        "fontStyle": "normal",
        "fontWeight": "700",
      },
    ]
  }
  weight="Bold"
>
  Text
</Text>
`;

exports[`Test Typography Components Label Snapshot 4`] = `
<Text
  color="white"
  defaultColor="blue"
  defaultWeight="Bold"
  font="TitilliumSansPro"
  fontStyle={
    {
      "fontSize": 16,
    }
  }
  style={
    [
      {
        "fontSize": 16,
      },
      {
        "color": "#FFFFFF",
        "fontFamily": "Titillium Sans Pro",
        "fontStyle": "normal",
        "fontWeight": "700",
      },
    ]
  }
  weight="Bold"
>
  Text
</Text>
`;

exports[`Test Typography Components LabelSmall Snapshot 1`] = `
<Text
  color="blue"
  defaultColor="blue"
  defaultWeight="Bold"
  font="TitilliumSansPro"
  fontStyle={
    {
      "fontSize": 14,
      "lineHeight": 21,
    }
  }
  style={
    [
      {
        "fontSize": 14,
        "lineHeight": 21,
      },
      {
        "color": "#0073E6",
        "fontFamily": "Titillium Sans Pro",
        "fontStyle": "normal",
        "fontWeight": "700",
      },
    ]
  }
  weight="Bold"
>
  Text
</Text>
`;

exports[`Test Typography Components LabelSmall Snapshot 2`] = `
<Text
  color="blue"
  defaultColor="blue"
  defaultWeight="Bold"
  font="TitilliumSansPro"
  fontStyle={
    {
      "fontSize": 14,
      "lineHeight": 21,
    }
  }
  style={
    [
      {
        "fontSize": 14,
        "lineHeight": 21,
      },
      {
        "color": "#0073E6",
        "fontFamily": "Titillium Sans Pro",
        "fontStyle": "normal",
        "fontWeight": "700",
      },
    ]
  }
  weight="Bold"
>
  Text
</Text>
`;

exports[`Test Typography Components LabelSmall Snapshot 3`] = `
<Text
  color="bluegrey"
  defaultColor="blue"
  defaultWeight="Bold"
  font="TitilliumSansPro"
  fontStyle={
    {
      "fontSize": 14,
      "lineHeight": 21,
    }
  }
  style={
    [
      {
        "fontSize": 14,
        "lineHeight": 21,
      },
      {
        "color": "#475A6D",
        "fontFamily": "Titillium Sans Pro",
        "fontStyle": "normal",
        "fontWeight": "700",
      },
    ]
  }
  weight="Bold"
>
  Text
</Text>
`;

exports[`Test Typography Components LabelSmall Snapshot 4`] = `
<Text
  color="red"
  defaultColor="blue"
  defaultWeight="Bold"
  font="TitilliumSansPro"
  fontStyle={
    {
      "fontSize": 14,
      "lineHeight": 21,
    }
  }
  style={
    [
      {
        "fontSize": 14,
        "lineHeight": 21,
      },
      {
        "color": "#C02927",
        "fontFamily": "Titillium Sans Pro",
        "fontStyle": "normal",
        "fontWeight": "700",
      },
    ]
  }
  weight="Bold"
>
  Text
</Text>
`;

exports[`Test Typography Components LabelSmall Snapshot 5`] = `
<Text
  color="white"
  defaultColor="blue"
  defaultWeight="Bold"
  font="TitilliumSansPro"
  fontStyle={
    {
      "fontSize": 14,
      "lineHeight": 21,
    }
  }
  style={
    [
      {
        "fontSize": 14,
        "lineHeight": 21,
      },
      {
        "color": "#FFFFFF",
        "fontFamily": "Titillium Sans Pro",
        "fontStyle": "normal",
        "fontWeight": "700",
      },
    ]
  }
  weight="Bold"
>
  Text
</Text>
`;

exports[`Test Typography Components Link Snapshot 1`] = `
<Text
  color="blue"
  defaultColor="blue"
  defaultWeight="Semibold"
  font="TitilliumSansPro"
  fontStyle={
    {
      "fontSize": 16,
      "textDecorationLine": "underline",
    }
  }
  style={
    [
      {
        "fontSize": 16,
        "textDecorationLine": "underline",
      },
      {
        "color": "#0073E6",
        "fontFamily": "Titillium Sans Pro",
        "fontStyle": "normal",
        "fontWeight": "600",
      },
    ]
  }
  weight="Semibold"
>
  Text
</Text>
`;

exports[`Test Typography Components Monospace Snapshot 1`] = `
<Text
  color="bluegrey"
  defaultColor="bluegrey"
  defaultWeight="Regular"
  font="RobotoMono"
  fontStyle={
    {
      "fontSize": 16,
    }
  }
  style={
    [
      {
        "fontSize": 16,
      },
      {
        "color": "#475A6D",
        "fontFamily": "Roboto Mono",
        "fontStyle": "normal",
        "fontWeight": "400",
      },
    ]
  }
  weight="Regular"
>
  Text
</Text>
`;
